--- a/gaussiannaivebayes.ipynb
+++ b/gaussiannaivebayes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 35,
    "id": "minus-customs",
    "metadata": {},
    "outputs": [],
@@ -19,14 +19,14 @@
     "        \n",
     "    return r\n",
     "\n",
-    "def _exponent(x):\n",
+    "def _exp(x):\n",
     "    \"\"\"Use Taylor/Maclaurin series expansion for e^x is this:\n",
     "\n",
     "          +inf [ x^k ]           x^2    x^3      x^4        x^5\n",
     "    e^x = SUM  [ --- ] = 1 + x + --- + ----- + ------- + --------- + ....\n",
     "          k=0  [  k! ]           2*1   3*2*1   4*3*2*1   5*4*3*2*1\n",
     "    \"\"\"\n",
-    "    r=1,n=1\n",
+    "    r,n=1,1\n",
     "    while n < 20:\n",
     "        numer,denom=1,1\n",
     "        for k in range(1,n+1):\n",
@@ -34,38 +34,49 @@
     "            denom*=k\n",
     "        r+=numer/denom \n",
     "        n+=1\n",
-    "    return r\n",
-    "            \n",
-    "# Calculate the standard deviation of a list of numbers\n",
-    "def stdev(numbers):\n",
-    "    avg = mean(numbers)\n",
-    "    variance = sum([(x-avg)(x-avg) for x in numbers]) / float(len(numbers)-1)\n",
-    "    return sqrt(variance)\n",
-    "\n"
+    "    return r\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "narrow-affairs",
+   "execution_count": 41,
+   "id": "manufactured-summit",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: 1.5425966116475554e-09, 1: 0.013636752786743596}\n"
+      "4.516635916254486 4.516635916257245\n",
+      "11.023176380641601 11.023176380622958\n"
      ]
     }
    ],
    "source": [
+    "from math import sqrt\n",
+    "from math import exp\n",
+    "\n",
+    "print(sqrt(20.4),_sqrt(20.4))\n",
+    "print(exp(2.4),_exp(2.4))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "narrow-affairs",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "##Multinomial Naive Bayes Classifier from scratch can be used for homomorphic encryption\n",
     "\n",
     "# Example of calculating class probabilities\n",
-    "from math import sqrt    #use our approximation\n",
-    "from math import pi      #just a constant\n",
+    "#from math import sqrt    #use our approximation\n",
+    "#from math import pi      #just a constant\n",
     "from math import exp     #use our approximation\n",
-    " \n",
+    "\n",
+    "pi=3.14159\n",
+    "\n",
+    "epsilon=0.01\n",
     "# Split the dataset by class values, returns a dictionary\n",
     "def separate_by_class(dataset):\n",
     "    separated = dict()\n",
@@ -79,13 +90,17 @@
     " \n",
     "# Calculate the mean of a list of numbers\n",
     "def mean(numbers):\n",
+    "    if not len(numbers):\n",
+    "        return 0\n",
     "    return sum(numbers)/float(len(numbers))\n",
     " \n",
     "# Calculate the standard deviation of a list of numbers\n",
     "def stdev(numbers):\n",
     "    avg = mean(numbers)\n",
+    "    if not len(numbers):\n",
+    "        return epsilon\n",
     "    variance = sum([(x-avg)**2 for x in numbers]) / float(len(numbers)-1)\n",
-    "    return sqrt(variance)\n",
+    "    return _sqrt(variance)\n",
     " \n",
     "# Calculate the mean, stdev and count for each column in a dataset\n",
     "def summarize_dataset(dataset):\n",
@@ -103,8 +118,15 @@
     " \n",
     "# Calculate the Gaussian probability distribution function for x\n",
     "def calculate_probability(x, mean, stdev):\n",
-    "    exponent = exp(-((x-mean)**2 / (2 * stdev**2 )))\n",
-    "    return (1 / (sqrt(2 * pi) * stdev)) * exponent\n",
+    "    if stdev <=0:\n",
+    "        stdev=epsilon\n",
+    "    exponent = _exp(-((x-mean)**2 / (2 * stdev**2 )))\n",
+    "    exponent_real=exp(-((x-mean)**2 / (2 * stdev**2 )))\n",
+    "    if abs(exponent/exponent_real) > 40:\n",
+    "        #exponent = _exp(-((x-mean)**2 / (2 * stdev**2 )))\n",
+    "        #exponent_real=exp(-((x-mean)**2 / (2 * stdev**2 )))\n",
+    "        print(exponent,exponent_real)\n",
+    "    return (1 / (_sqrt(2 * pi) * stdev)) * exponent\n",
     " \n",
     "# Calculate the probabilities of predicting each class for a given row\n",
     "def calculate_class_probabilities(summaries, row):\n",
@@ -116,27 +138,81 @@
     "            mean, stdev, _ = class_summaries[i]\n",
     "            probabilities[class_value] *= calculate_probability(row[i], mean, stdev)\n",
     "    return probabilities\n",
-    " \n",
-    "# Test calculating class probabilities\n",
-    "dataset = [[3.393533211,2.331273381,0],\n",
-    "    [3.110073483,1.781539638,0],\n",
-    "    [1.343808831,3.368360954,0],\n",
-    "    [3.582294042,4.67917911,0],\n",
-    "    [2.280362439,2.866990263,0],\n",
-    "    [7.423436942,4.696522875,1],\n",
-    "    [5.745051997,3.533989803,1],\n",
-    "    [9.172168622,2.511101045,1],\n",
-    "    [7.792783481,3.424088941,1],\n",
-    "    [7.939820817,0.791637231,1]]\n",
-    "summaries = summarize_by_class(dataset)\n",
-    "probabilities = calculate_class_probabilities(summaries, dataset[-1])\n",
-    "print(probabilities)"
+    " \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "electronic-exhibition",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'exponent' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m/tmp/ipykernel_25034/3797813703.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     42\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcategories\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     43\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 44\u001b[0;31m     \u001b[0mprobabilities\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcalculate_class_probabilities\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msummaries\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     45\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mprobabilities\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprobabilities\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_25034/1369813510.py\u001b[0m in \u001b[0;36mcalculate_class_probabilities\u001b[0;34m(summaries, row)\u001b[0m\n\u001b[1;32m     68\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclass_summaries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m             \u001b[0mmean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstdev\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0m_\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclass_summaries\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 70\u001b[0;31m             \u001b[0mprobabilities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mclass_value\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m*=\u001b[0m \u001b[0mcalculate_probability\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstdev\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     71\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mprobabilities\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_25034/1369813510.py\u001b[0m in \u001b[0;36mcalculate_probability\u001b[0;34m(x, mean, stdev)\u001b[0m\n\u001b[1;32m     54\u001b[0m     \u001b[0;31m#exponent = _exp(-((x-mean)**2 / (2 * stdev**2 )))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m     \u001b[0;31m#exponent_real=exp(-((x-mean)**2 / (2 * stdev**2 )))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m     \u001b[0;32mif\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexponent\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mexponent_real\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m40\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m         \u001b[0mexponent\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_exp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mstdev\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m         \u001b[0mexponent_real\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mexp\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mstdev\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'exponent' referenced before assignment"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "\n",
+    "corpus = [\n",
+    "     'Cats are often angry and irritable',\n",
+    "     'Cats are never boring',\n",
+    "     'Dogs are very docile',\n",
+    "    'Cats do a lot of scratching',\n",
+    "    'Tao,Babak and greg are trying PET',\n",
+    "     'Cats are irritable when they want something',\n",
+    "    'They like to chew on things, and belly rubs',\n",
+    "    'Dogs like humans and want to please them',\n",
+    "    'Dogs and Cats are both good family pets, but people think Cats are for solitary people',\n",
+    "    'humans like both Cats and Dogs, but Cats do scratching and Dogs do chewing',\n",
+    "    'Cats have lots of fur, dogs are affectionate',\n",
+    "    'Tao and Babak are working with PET'\n",
+    "]\n",
+    "categories=np.array([[1], \n",
+    "                     [1], \n",
+    "                     [0],\n",
+    "                     [1],\n",
+    "                     [2],\n",
+    "                     [1],\n",
+    "                     [0],\n",
+    "                     [0],\n",
+    "                     [1],\n",
+    "                     [1],\n",
+    "                     [0],\n",
+    "                     [2]\n",
+    "                    ])\n",
+    "\n",
+    "vectorizer = TfidfVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus).toarray()\n",
+    "\n",
+    "arr = np.append(X,categories, axis=1)\n",
+    "#df=pd.DataFrame(X,columns=vectorizer.get_feature_names_out())\n",
+    "#vectorizer.get_feature_names_out()\n",
+    "#print(arr)\n",
+    "summaries = summarize_by_class(arr)\n",
+    "\n",
+    "for x,c in enumerate(categories):\n",
+    "\n",
+    "    probabilities = calculate_class_probabilities(summaries, arr[x])\n",
+    "    print(c[0],max(probabilities,key=probabilities.get))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "electronic-exhibition",
+   "id": "circular-fetish",
    "metadata": {},
    "outputs": [],
    "source": []
