--- a/Tao-test.ipynb
+++ b/Tao-test.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "swedish-platform",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "tracked-shame",
    "metadata": {},
    "outputs": [],
@@ -106,8 +106,8 @@
        "    <tr>\n",
        "      <th>top</th>\n",
        "      <td>An example/template for a routine normal male...</td>\n",
-       "      <td>Normal ENT Exam - 1</td>\n",
-       "      <td>EARS, NOSE, MOUTH AND THROAT,EARS/NOSE: , The ...</td>\n",
+       "      <td>Thyroid Mass Consult</td>\n",
+       "      <td>CHIEF COMPLAINT: , Jaw pain.,HISTORY OF PRESEN...</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -128,16 +128,16 @@
        "top      An example/template for a routine normal male...   \n",
        "freq                                                   10   \n",
        "\n",
-       "                  sample_name  \\\n",
-       "count                    3999   \n",
-       "unique                   2265   \n",
-       "top      Normal ENT Exam - 1    \n",
-       "freq                        4   \n",
+       "                   sample_name  \\\n",
+       "count                     3999   \n",
+       "unique                    2265   \n",
+       "top      Thyroid Mass Consult    \n",
+       "freq                         4   \n",
        "\n",
        "                                            transcription keywords  \n",
        "count                                                3973     3145  \n",
        "unique                                               2246     3079  \n",
-       "top     EARS, NOSE, MOUTH AND THROAT,EARS/NOSE: , The ...           \n",
+       "top     CHIEF COMPLAINT: , Jaw pain.,HISTORY OF PRESEN...           \n",
        "freq                                                    4       65  "
       ]
      },
@@ -224,23 +224,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "id": "proper-addition",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"EXAM:,  Mammographic screening FFDM,HISTORY: , 40-year-old female who is on oral contraceptive pills.  She has no present symptomatic complaints.  No prior history of breast surgery nor family history of breast CA.,TECHNIQUE: , Standard CC and MLO views of the breasts.,COMPARISON: , This is the patient's baseline study.,FINDINGS: , The breasts are composed of moderately to significantly dense fibroglandular tissue.  The overlying skin is unremarkable.,There are a tiny cluster of calcifications in the right breast, near the central position associated with 11:30 on a clock.,There are benign-appearing calcifications in both breasts as well as unremarkable axillary lymph nodes.,There are no spiculated masses or architectural distortion.,IMPRESSION:,  Tiny cluster of calcifications at the 11:30 position of the right breast.  Recommend additional views; spot magnification in the MLO and CC views of the right breast.,BIRADS Classification 0 - Incomplete,MAMMOGRAPHY INFORMATION:,1.  A certain percentage of cancers, probably 10% to 15%, will not be identified by mammography.,2.  Lack of radiographic evidence of malignancy should not delay a biopsy if a clinically suspicious mass is present.,3.  These images were obtained with FDA-approved digital mammography equipment, and iCAD Second Look Software Version 7.2 was utilized.\""
+       "(' SOAP / Chart / Progress Notes',\n",
+       " \"REASON FOR VISIT:,  Followup visit status post removal of external fixator and status post open reduction internal fixation of right tibial plateau fracture.,HISTORY OF PRESENT ILLNESS: , The patient is now approximately week status post removal of Ex-Fix from the right knee with an MUA following open reduction internal fixation of right tibial plateau fracture.  The patient states that this pain is well controlled.  He has had no fevers, chills or night sweats.  He has had some mild drainage from his pin sites.  He just started doing range of motion type exercises for his right knee.  He has had no numbness or tingling.,FINDINGS: , On exam, his pin sites had no erythema.  There is some mild drainage but they have been dressing with bacitracin, it looks like there may be part of the fluid noted.  The patient had 3/5 strength in the EHL, FHL.  He has intact sensation to light touch in a DP, SP, and tibial nerve distribution.,X-rays taken include three views of the right knee.  It demonstrate status post open reduction internal fixation of the right tibial plateau with excellent hardware placement and alignment.,ASSESSMENT: , Status post open reduction and internal fixation of right tibial plateau fracture with removal ex fix.,PLANS: , I gave the patient a prescription for aggressive range of motion of the right knee.  I would like to really work on this as he has not had much up to this time.  He should remain nonweightbearing.  I would like to have him return in 2 weeks' time to assess his knee range of motion.  He should not need x-rays at that time.\")"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X_train[\"transcription\"].iloc[0]"
+    "idx=1341     \n",
+    "df_mt_Y.iloc[idx], df_mt_X[\"transcription\"].iloc[idx]"
    ]
   },
   {
@@ -426,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "retained-accent",
+   "id": "proprietary-nation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "distant-precipitation",
+   "id": "human-paintball",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "institutional-producer",
+   "id": "selected-circle",
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "informed-square",
+   "id": "specific-production",
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "genuine-madness",
+   "id": "presidential-extraction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "sitting-cradle",
+   "id": "heard-associate",
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "nuclear-drawing",
+   "id": "qualified-sally",
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "ordinary-accountability",
+   "id": "danish-suffering",
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +822,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "operating-tiger",
+   "id": "posted-california",
    "metadata": {},
    "outputs": [
     {
@@ -841,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "parental-theta",
+   "id": "fifth-provincial",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "worldwide-relation",
+   "id": "instructional-fifteen",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -863,7 +865,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "single-shirt",
+   "id": "lesbian-store",
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +891,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "rocky-pilot",
+   "id": "million-headset",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -904,7 +906,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "wireless-senate",
+   "id": "rising-lover",
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "caroline-spouse",
+   "id": "variable-medicaid",
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "greatest-ottawa",
+   "id": "classical-clone",
    "metadata": {},
    "outputs": [],
    "source": []
